--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -406,7 +406,8 @@
     "settings": "Ajustes",
     "noData": "Sin datos",
     "otherSettings": "Otras Configuraciones",
-    "changeLanguage": "Cambiar Idioma"
+    "changeLanguage": "Cambiar Idioma",
+    "manageCustomFields": "Gestionar Campos Personalizados"
   },
   "deleteOrg": {
     "deleteOrganization": "Eliminar organización",
@@ -654,5 +655,16 @@
   "userChatRoom": {
     "selectContact": "Seleccione un contacto para iniciar una conversación",
     "sendMessage": "Enviar mensaje"
+  },
+  "campoPerfildeOrganización": {
+    "cargando": "Cargando...",
+    "noCustomField": "No hay campos personalizados disponibles",
+    "customFieldName": "Nombre de campo",
+    "enterCustomFieldName": "Ingrese el nombre del campo",
+    "customFieldType": "Tipo de campo",
+    "saveChanges": "Guardar cambios",
+    "Eliminar campo personalizado": "Eliminar campo personalizado",
+    "fieldSuccessMessage": "Campo agregado exitosamente",
+    "fieldRemovalSuccess": "Campo eliminado exitosamente"
   }
 }
