Feature request: Adding advertisement screen (#994)
* Add/ test for OrgPost.tsx

* fix:  org post back to default

* Added Dialog 2

* Updated Dialog UI

* Removed Extra code

* Updated Plugin store

* fix: warnings and solves #951  & #948

* fix: warnings and solves #951  & #948

* fix: warnings and solves #951  & #948

* Fix: UI Redesign

* fix: merge

* fix

* Update AddOnStore.tsx

* Fixed Merge Errors

* Add test: for OrgEntry

* Test 3

* fix test 4

* chores: version changes

* Add: Initial Websocket setup on talawa mobile web

* Add: plugin logic

* Add: plugin logic

* removed extra

* removed extra

* Added: Tests

* fix

* Added WEBSOCKET_URL in .env.example

* Advertisement Management Screen

* Feature: Create and Delete advertisement

* Only current OrgIDs are visible to admin

* Showing advertisements in the User end app

* Message: fix

* formatting

* update test

* Fix # 1071

* Added test for entry file

* Added test for entry file2

* Added test for entry file2

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -646,6 +646,14 @@
     "event": "Événement",
     "organization": "Organisation"
   },
+  "advertisement": {
+    "title": "Publicités",
+    "pHeading": "Gérer les publicités",
+    "activeAds": "Campagnes actives",
+    "archievedAds": "Campagnes terminées",
+    "pMessage": "Aucune publicité n'est présente pour cette campagne.",
+    "delete": "Supprimer"
+  },
   "userChat": {
     "chat": "Chat",
     "search": "Recherche",
