--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -646,6 +646,14 @@
     "event": "आयोजन",
     "organization": "संगठन"
   },
+  "advertisement": {
+    "title": "विज्ञापन",
+    "pHeading": "विज्ञापन प्रबंधन",
+    "activeAds": "सक्रिय अभियान",
+    "archievedAds": "संपन्न अभियान",
+    "pMessage": "इस अभियान के लिए कोई विज्ञापन नहीं हैं।",
+    "delete": "हटाएँ"
+  },
   "userChat": {
     "chat": "बात",
     "search": "खोज",
