--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -133,7 +133,7 @@
     "noUserFound": "Aucun utilisateur trouvé",
     "sort": "Trier",
     "Oldest": "Les plus anciennes d'abord",
-    "Latest": "Les plus récentes d'abord",
+    "Newest": "Les plus récentes d'abord",
     "filter": "Filtre",
     "roleUpdated": "Rôle mis à jour.",
     "noResultsFoundFor": "Aucun résultat trouvé pour ",
