--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -132,7 +132,7 @@
     "noUserFound": "No se encontró ningún usuario.",
     "sort": "Ordenar",
     "Oldest": "Más Antiguas Primero",
-    "Latest": "Más Recientes Primero",
+    "Newest": "Más Recientes Primero",
     "filter": "Filtrar",
     "roleUpdated": "Rol actualizado.",
     "noResultsFoundFor": "No se encontraron resultados para ",
