--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -132,7 +132,7 @@
     "noUserFound": "कोई उपयोगकर्ता नहीं मिला।",
     "sort": "छांटें",
     "Oldest": "सबसे पुराना पहले",
-    "Latest": "सबसे नवीनतम पहले",
+    "Newest": "सबसे नवीनतम पहले",
     "filter": "फ़िल्टर",
     "roleUpdated": "भूमिका अपडेट की गई।",
     "noResultsFoundFor": "के लिए कोई परिणाम नहीं मिला ",
