--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -132,7 +132,7 @@
     "noUserFound": "找不到用戶。",
     "sort": "排序",
     "Oldest": "最旧的优先",
-    "Latest": "最新的优先",
+    "Newest": "最新的优先",
     "filter": "過濾",
     "roleUpdated": "角色已更新。",
     "noResultsFoundFor": "未找到结果 ",
