feat: Implemented Sorting Functionality for Users Screen (#1081)
* feat: Implemented Sorting Functionality for Users Screen

Changes Made:
- Implemented sorting functionality for the users screen.
- Added options for sorting users by latest first and oldest first.
- Wrote corresponding tests to ensure the sorting behavior is accurate.
- Tested the sorting feature by logging into the Talawa admin dashboard,
  navigating to the users option, and checking the sort button.

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

* fix: altering the words

- Made Latest to Newest

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

---------

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -132,6 +132,8 @@
     "loadingUsers": "Chargement des utilisateurs...",
     "noUserFound": "Aucun utilisateur trouvé",
     "sort": "Trier",
+    "Oldest": "Les plus anciennes d'abord",
+    "Newest": "Les plus récentes d'abord",
     "filter": "Filtre",
     "roleUpdated": "Rôle mis à jour.",
     "noResultsFoundFor": "Aucun résultat trouvé pour ",
