--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -131,6 +131,8 @@
     "loadingUsers": "उपयोगकर्ता लोड हो रहा है ...",
     "noUserFound": "कोई उपयोगकर्ता नहीं मिला।",
     "sort": "छांटें",
+    "Oldest": "सबसे पुराना पहले",
+    "Newest": "सबसे नवीनतम पहले",
     "filter": "फ़िल्टर",
     "roleUpdated": "भूमिका अपडेट की गई।",
     "noResultsFoundFor": "के लिए कोई परिणाम नहीं मिला ",
