--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -141,6 +141,8 @@
     "loadingUsers": "Loading Users...",
     "noUserFound": "No User Found",
     "sort": "Sort",
+    "Newest": "Newest First",
+    "Oldest": "Oldest First",
     "filter": "Filter",
     "noOrgError": "Organizations not found, please create an organization through dashboard",
     "roleUpdated": "Role Updated.",
