fixes failing test

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -200,6 +200,8 @@
     "users": "Users",
     "searchName": "Enter Name",
     "searchevent": "Enter Event",
+    "searchFirstName": "Enter First Name",
+    "searchLastName": "Enter Last Name",
     "searchFullName": "Enter Full Name"
   },
   "userListCard": {
