Implementation of sorting of requests in Request screen (#1082)
* requests sorting

* added missing test

* added missing test

* increased test coverage for requests screen

* added the reviewed changes and improved tests

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -153,6 +153,8 @@
     "noRequestFound": "Aucune demande trouvée",
     "sort": "Trier",
     "filter": "Filtre",
+    "Oldest": "Les plus anciennes d'abord",
+    "Latest": "Les plus récentes d'abord",
     "userApproved": "Approuvé par l'utilisateur",
     "userRejected": "Utilisateur rejeté",
     "noResultsFoundFor": "Aucun résultat trouvé pour ",
