--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -152,6 +152,8 @@
     "noRequestFound": "कोई अनुरोध नहीं मिला।",
     "sort": "छांटें",
     "filter": "फ़िल्टर",
+    "Oldest": "सबसे पुराना पहले",
+    "Latest": "सबसे नवीनतम पहले",
     "userApproved": "उपयोगकर्ता स्वीकृत",
     "userRejected": "उपयोगकर्ता अस्वीकृत",
     "noResultsFoundFor": "के लिए कोई परिणाम नहीं मिला ",
