--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -679,7 +679,11 @@
     "EXname": "Ex. Cookie Shop",
     "EXlink": "Ex. http://yourwebsite.com/photo",
     "register": "Create Advertisement",
-    "close": "Close "
+    "close": "Close ",
+    "deleteAdvertisement": "Delete Advertisement",
+    "deleteAdvertisementMsg": "Do you want to remove this advertisement?",
+    "no": "No",
+    "yes": "Yes"
   },
   "userChat": {
     "chat": "Chat",
