--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -94,8 +94,8 @@
     "displayImage": "Display Image",
     "enterName": "Enter Name",
     "sort": "Sort",
-    "Latest": "Latest First",
-    "Oldest": "Oldest First",
+    "Latest": "Latest",
+    "Oldest": "Earliest",
     "filter": "Filter",
     "cancel": "Cancel",
     "noOrgErrorTitle": "Organizations Not Found",
