fix: Translations modified
- Ensured correct translations for oldest first to earliest and latest first to latest in all languages

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -88,8 +88,8 @@
     "displayImage": "Mostrar imagen",
     "enterName": "Ingrese su nombre",
     "sort": "Ordenar",
-    "Oldest": "Más Antiguas Primero",
-    "Latest": "Más Recientes Primero",
+    "Oldest": "Más Temprano",
+    "Latest": "El último",
     "filter": "Filtrar",
     "cancel": "Cancelar",
     "endOfResults": "Fin de los resultados",
