--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -88,8 +88,8 @@
     "displayImage": "顯示圖像",
     "enterName": "输入名字",
     "sort": "排序",
-    "Oldest": "最旧的优先",
-    "Latest": "最新的优先",
+    "Oldest": "最早的",
+    "Latest": "最新的",
     "filter": "過濾",
     "cancel": "取消",
     "endOfResults": "結果結束",
