--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -88,8 +88,8 @@
     "displayImage": "Afficher l'image",
     "enterName": "Entrez le nom",
     "sort": "Trier",
-    "Oldest": "Les plus anciennes d'abord",
-    "Latest": "Les plus récentes d'abord",
+    "Oldest": "Le plus tôt",
+    "Latest": "Dernière",
     "filter": "Filtre",
     "cancel": "Annuler",
     "endOfResults": "Fin des résultats",
