--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -88,8 +88,8 @@
     "displayImage": "प्रदर्शन छवि",
     "enterName": "नाम दर्ज करें",
     "sort": "छांटें",
-    "Oldest": "सबसे पुराना पहले",
-    "Latest": "सबसे नवीनतम पहले",
+    "Oldest": "सबसे पुराना",
+    "Latest": "सबसे नवीनतम",
     "filter": "फ़िल्टर",
     "cancel": "रद्द करना",
     "endOfResults": "परिणामों का अंत",
