Single search modal instead of two search modal (#1166)
* Single search modal

* fixes failing test

* updated the test that were failing

* small commit

* fixes test

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -202,8 +202,7 @@
     "users": "Users",
     "searchName": "Enter Name",
     "searchevent": "Enter Event",
-    "searchFirstName": "Enter First Name",
-    "searchLastName": "Enter Last Name"
+    "searchFullName": "Enter Full Name"
   },
   "userListCard": {
     "joined": "Joined",
