--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -42,7 +42,7 @@
   "leftDrawer": {
     "talawaAdminPortal": "塔拉瓦管理门户",
     "menu": "菜单",
-    "organizations": "组织",
+    "my organizations": "我的组织",
     "requests": "请求",
     "users": "用户",
     "logout": "退出登录"
@@ -78,7 +78,7 @@
     "designation": "指定",
     "email": "電子郵件",
     "searchByName": "按名稱搜索",
-    "organizations": "组织",
+    "my organizations": "我的组织",
     "createOrganization": "創建組織",
     "createSampleOrganization": "创建示范组织",
     "description": "描述",
