--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -42,7 +42,7 @@
   "leftDrawer": {
     "talawaAdminPortal": "Portal de administración de Talawa",
     "menu": "Menú",
-    "organizations": "Organizaciones",
+    "my organizations": "Mis Organizaciones",
     "requests": "Solicitudes",
     "users": "Usuarios",
     "logout": "Cerrar sesión"
@@ -78,7 +78,7 @@
     "designation": "Designacion",
     "email": "Correo electrónico",
     "searchByName": "Buscar por nombre",
-    "organizations": "Organizaciones",
+    "my organizations": "Mis Organizaciones.",
     "createOrganization": "Crear organización",
     "createSampleOrganization": "Crear organización de muestra",
     "description": "Descripción",
