--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -670,7 +670,7 @@
     "delete": "Delete",
     "Rname": "Enter name of Advertisement",
     "Rtype": "Select type of Advertisement",
-    "Rlink": "Provide a link for content to be displayed",
+    "Rmedia": "Provide media content to be displayed",
     "RstartDate": "Select Start Date",
     "RendDate": "Select End Date",
     "RClose": "Close the window",
