fix: Changed oldest to earliest
- Altered the oldest key to earliest to avoid confusion

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -95,7 +95,7 @@
     "enterName": "Enter Name",
     "sort": "Sort",
     "Latest": "Latest",
-    "Oldest": "Earliest",
+    "Earliest": "Earliest",
     "filter": "Filter",
     "cancel": "Cancel",
     "noOrgErrorTitle": "Organizations Not Found",
