--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -88,7 +88,7 @@
     "displayImage": "Afficher l'image",
     "enterName": "Entrez le nom",
     "sort": "Trier",
-    "Oldest": "Le plus tôt",
+    "Earliest": "Le plus tôt",
     "Latest": "Dernière",
     "filter": "Filtre",
     "cancel": "Annuler",
