--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -88,7 +88,7 @@
     "displayImage": "Mostrar imagen",
     "enterName": "Ingrese su nombre",
     "sort": "Ordenar",
-    "Oldest": "Más Temprano",
+    "Earliest": "Más Temprano",
     "Latest": "El último",
     "filter": "Filtrar",
     "cancel": "Cancelar",
