Revert "Enabling editing an advertisement (#1169)"
This reverts commit 269a3f05a43f7d9473040a8a4b17ca7862685b3b.

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -682,11 +682,7 @@
     "deleteAdvertisement": "Delete Advertisement",
     "deleteAdvertisementMsg": "Do you want to remove this advertisement?",
     "no": "No",
-    "yes": "Yes",
-    "view": "View",
-    "edit": "Edit",
-    "editAdvertisement": "Edit Advertisement",
-    "saveChanges": "Save Changes"
+    "yes": "Yes"
   },
   "userChat": {
     "chat": "Chat",
