feat: Implemented orglist sorting functionality (#1076)
* feat: Implemented orglist sorting functionality

Changes Made:
- Added a new state variable, `sortingOption`, to manage the current sorting preference. Default is set to 'latest'.
- Introduced a sorting mechanism using the `sortOrgs` function that sorts organizations based on creation date.
- Updated the `useEffect` hook to apply sorting when either `orgsData` or `sortingOption` changes.
- Added two sorting options - latest first and oldest first
- Also added the relevant tests for the correct functionality of the changes.

Fixes issue #1072

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

* fix: Removed redundancy

- Removed the new interface instead imported the existing interface.
- Added cleanup function in tests.

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

* fix: Highlighted the selected option

- Ensured that the selected option is highlighted in the sort dropdown.
- Made changes to ensure proper translation.
- Changed the variant from "outline success" to "success" when the option is selected,
  making it feasible for the user to know that the option is applied.

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

* Removed redundant code

- Removed extra state variable and combined the two state variables into one
  as they perform same functionality.

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

* fixed the failing test

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

* Update en.json

- Changed the sort option titles
   - Latest first to Latest
   - Oldest first to Earliest

* fix: Translations modified

- Ensured correct translations for oldest first to earliest and latest first to latest in all languages

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

* fixed the failing test

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

* feat: Implement server-side sorting for organizations

Instead of handling sorting 

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -88,6 +88,8 @@
     "displayImage": "Afficher l'image",
     "enterName": "Entrez le nom",
     "sort": "Trier",
+    "Earliest": "Le plus tôt",
+    "Latest": "Dernière",
     "filter": "Filtre",
     "cancel": "Annuler",
     "endOfResults": "Fin des résultats",
