Added the Filtering Functionality (#1281)
* Added tests for Advertisements.tsx

* Added tests for Advertisement.tsx

* Added Filtering Functionality

* fixed tests

* changed name of test

--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -138,7 +138,8 @@
     "filter": "फ़िल्टर",
     "roleUpdated": "भूमिका अपडेट की गई।",
     "noResultsFoundFor": "के लिए कोई परिणाम नहीं मिला ",
-    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।"
+    "talawaApiUnavailable": "तलवा-एपीआई सेवा उपलब्ध नहीं है। क्या यह चल रहा है? अपनी नेटवर्क कनेक्टिविटी भी जांचें।",
+    "cancel": "रद्द करें"
   },
   "requests": {
     "title": "तलवा अनुरोध",
