--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -600,7 +600,7 @@
     "lastName": "姓",
     "emailAddress": "電子郵件地址",
     "updateImage": "更新圖片",
-    "save": "節省"
+    "saveChanges": "保存更改"
   },
   "donate": {
     "donateTo": "捐贈給",
