--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -297,7 +297,8 @@
     "Oldest": "最旧的优先",
     "Latest": "最新的优先",
     "sortPost": "排序帖子",
-    "tag": "您的浏览器不支持视频标签"
+    "tag": "您的浏览器不支持视频标签",
+    "pinPost": "针柱"
   },
   "postNotFound": {
     "post": "郵政",
