added translations for different languages and improved variable names

--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -673,7 +673,8 @@
     "deleteAdvertisement": "Supprimer l'annonce",
     "deleteAdvertisementMsg": "Voulez-vous supprimer cette annonce ?",
     "no": "Non",
-    "yes": "Oui"
+    "yes": "Oui",
+    "Rmedia": "Fournir du contenu multimédia à afficher"
   },
   "userChat": {
     "chat": "Chat",
