--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -673,7 +673,8 @@
     "deleteAdvertisement": "विज्ञापन हटाएं",
     "deleteAdvertisementMsg": "क्या आप इस विज्ञापन को हटाना चाहते हैं?",
     "no": "नहीं",
-    "yes": "हाँ"
+    "yes": "हाँ",
+    "Rmedia": "प्रदर्शित करने के लिए मीडिया सामग्री प्रदान करें"
   },
   "userChat": {
     "chat": "बात",
