--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -428,7 +428,8 @@
     "deleteMsg": "Do you want to delete this organization?",
     "cancel": "Cancel",
     "confirmDelete": "Confirm Delete",
-    "longDelOrgMsg": "By clicking on Delete Organization button the organization will be permanently deleted along with its events, tags and all related data."
+    "longDelOrgMsg": "By clicking on Delete Organization button the organization will be permanently deleted along with its events, tags and all related data.",
+    "successfullyDeletedSampleOrganization": "Successfully deleted sample Organization"
   },
   "userUpdate": {
     "firstName": "First Name",
