feat: added input validation for firstname, email, lastname and password in user registration

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -9,7 +9,11 @@
     "lastName": "Last Name",
     "email": "Email",
     "password": "Password",
-    "atleast_8_char_long": "Atleast 8 Character long",
+    "atleast_6_char_long": "Atleast 6 Character long",
+    "firstName_invalid": "First name should contain only lower and upper case letters",
+    "lastName_invalid": "Last name should contain only lower and upper case letters",
+    "password_invalid": "Password should contain atleast one uppercase letter, one lowercase letter, one numerical value and one special character and password should have atleast 6 chracters",
+    "email_invalid": "Email should have atleast 8 characters",
     "Password_and_Confirm_password_mismatches.": "Password and Confirm password mismatches.",
     "confirmPassword": "Confirm Password",
     "forgotPassword": "Forgot Password ?",
