--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -276,6 +276,7 @@
     "postDetails": "पोस्ट विवरण",
     "postTitle1": "पोस्ट का शीर्षक लिखें",
     "postTitle": "शीर्षक",
+    "addMedia": "फ़ोटो या वीडियो अपलोड करें",
     "information": "जानकारी",
     "information1": "पोस्ट की जानकारी लिखें",
     "image": "पोस्ट छवि",
@@ -292,7 +293,8 @@
     "Oldest": "सबसे पुराना पहले",
     "Latest": "सबसे नवीनतम पहले",
     "sortPost": "पोस्ट को क्रमित करें",
-    "tag": "आपका ब्राउज़र वीडियो टैग का समर्थन नहीं करता"
+    "tag": "आपका ब्राउज़र वीडियो टैग का समर्थन नहीं करता",
+    "postCreatedSuccess": "बधाई हो! आपने कुछ पोस्ट किया है।"
   },
   "postNotFound": {
     "post": "पोस्ट",
